[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/playernotes/playernoteinstance.gd" type="Script" id=1]

[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -342.0
margin_bottom = -485.0
rect_min_size = Vector2( 0, 115 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 675.0
margin_bottom = 108.0

[node name="Title" type="PanelContainer" parent="VBoxContainer"]
margin_right = 668.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Title"]
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="VBoxContainer/Title/HBoxContainer"]
margin_top = 3.0
margin_right = 462.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="ExpandButton" type="Button" parent="VBoxContainer/Title/HBoxContainer"]
margin_left = 466.0
margin_right = 546.0
margin_bottom = 20.0
text = "Show/Hide"

[node name="EditButton" type="Button" parent="VBoxContainer/Title/HBoxContainer"]
margin_left = 550.0
margin_right = 586.0
margin_bottom = 20.0
text = "Edit"

[node name="RemoveButton" type="Button" parent="VBoxContainer/Title/HBoxContainer"]
margin_left = 590.0
margin_right = 654.0
margin_bottom = 20.0
text = "Remove"

[node name="Date" type="PanelContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 668.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="VBoxContainer/Date"]
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 21.0
text = "Date"

[node name="Creator" type="PanelContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 668.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="VBoxContainer/Creator"]
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 21.0
text = "Added By:"

[node name="Description" type="PanelContainer" parent="VBoxContainer"]
visible = false
margin_top = 102.0
margin_right = 668.0
margin_bottom = 316.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Description"]
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 207.0
rect_min_size = Vector2( 300, 200 )

[node name="Label" type="Label" parent="VBoxContainer/Description/ScrollContainer"]
margin_right = 654.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Test"
valign = 1
autowrap = true

[connection signal="pressed" from="VBoxContainer/Title/HBoxContainer/ExpandButton" to="." method="_on_ExpandButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Title/HBoxContainer/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Title/HBoxContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
